# Advance-Trading-Model

./: .coverage  .gitignore  README.md  afternoon_analysis.txt  analyze_signals.py  analyze_today.py  backtest_retrained_results.txt  check_model.py  check_parquet_dates.py  config.py  debug_hang.py  debug_spoofer_diagnosis.py  deployment_guide.md  extract_afternoon.py  live_pnl.json  main.py  offline_spoofer.py  out.txt  paper_pnl.json  replay_inspector.py  report.txt  requirements.txt  run_brain_trainer.bat  run_pipeline.ps1  server_main.py  smoke_test.py  standalone_setup.md  streamlit_log.txt  test_backtest_types.py  test_tz_fix.py  tmp_abb_diag.py  tmp_analyze.py  tmp_count_drops.py  tmp_report.py  tmp_spoofer_out.txt  verify_history.py  verify_trending.py
config/: sector_universe.csv
config_data/: sector_universe.csv  sector_universe_v2_backup.csv
scripts/: _check_data.py  backfill_logs.py  (+26 more)
trading_core/: README.md  pyproject.toml  requirements.txt  setup.py
trading_core/core/config/: base_config.py
trading_core/core/features/: __init__.py  features.py
trading_core/core/features/calculators/: consecutive_same_dir.py  feature_utils.py  market_regime.py  momentum_acceleration.py  order_flow.py  relative_strength.py  squeeze_zscore.py  streak_exhaustion.py  structural_trend.py  velocity.py  volatility_context.py  vpt_acceleration.py  vwap_zscore.py  wick_pressure.py
trading_core/core/physics/: hybrid_news.py  quant_fixes.py  renko.py
trading_core/core/risk/: execution_guard.py  risk_fortress.py  strategy.py
trading_core/tests/: test_quant_overhaul.py
(+108 files in other folders)
